Improving the Get by Id filters and the UserRequestFilter for username attribute